feat ( users ) : add creating user endpoint
